<resources>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_location">Location</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_print">打印</string>
    <string name="menu_call_dada">自动发单</string>
    <string name="delay_faq_btn">延误原因</string>
    <string name="btn_go_buy">备货</string>
    <string name="main_description">This is a basic Activity showing an Action Bar which has been
        styled.
    </string>
    <string name="empty">空</string>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag can be number, alphabet, underscore, Chinese. Use , to split many tags.</string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="style_hint">style should be number</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Invalid format</string>
    <string name="error_network">Failed to init due to network exception.</string>
    <string name="setting_su">Succeed to set</string>
    <string name="WidgetProvider_timestamp_today">今天</string>
    <string name="WidgetProvider_timestamp_yesterday">昨天</string>
    <string name="WidgetProvider_timestamp_hour_ago">%s小时前</string>
    <string name="WidgetProvider_timestamp_hours_ago">%s小时前</string>
    <string name="WidgetProvider_timestamp_minutes_ago">%s分钟前</string>
    <string name="WidgetProvider_timestamp_just_now">刚刚</string>
    <string name="WidgetProvider_timestamp_month">%d月</string>
    <string name="WidgetProvider_timestamp_day">%d号</string>
    <string name="WidgetProvider_datetime_short" formatted="false">%tm月%td日 %tH:%tM</string>
    <string name="timeout">网络有问题，连不上</string>
    <string name="unknown_error_error_code">未知错误，错误代码</string>
    <string name="unknown_sina_network_error"> 服务器网络节点又出故障，换个网络试试</string>
    <string name="sd_card_in_not_mounted">SD卡未挂载</string>
    <string name="something_error">发生故障</string>
    <string name="please_deleted_cache_dir">权限出错，无法读取存储空间，需要用户手动删除SD卡下的
        /Android/data/cn.cainiaoshicai.crm 目录
    </string>
    <string name="askdelete">删除?</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="ok">确定</string>
    <string name="submit">提交</string>
    <string name="year">年前</string>
    <string name="month">月前</string>
    <string name="day">天前</string>
    <string name="hour">小时前</string>
    <string name="min">分钟前</string>
    <string name="sec">秒前</string>
    <string name="justnow">刚刚</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="today">今天</string>
    <string name="date_format">M月d日 HH:mm</string>
    <string name="year_format">yyyy年 M月d日 HH:mm</string>
    <string name="ten_thousand">万</string>
    <string name="oauthing">登录中</string>
    <string name="sina_server_error">检测到你跳转到错误页面，这是因为新浪微博第三方认证服务器出错，多次重复操作依然不行的话尝试换网络，四次元无能为力
    </string>
    <string name="token_expires_in_time">请注意，根据新浪微博的平台政策，刚添加的帐号会在 %s
        天后过期，到时需要重新登录，在授权过期之前重复登陆不会刷新剩余天数
    </string>
    <string name="your_token_is_expired">检测到你的授权信息已经过期了，请重新登录</string>
    <string name="logout_to_login_again">重新登录</string>
    <string name="dialog_title_error">出错啦</string>
    <string name="login_again">重新登录</string>
    <string name="have_account_whose_token_is_expired">登录帐号已经过期，无法收取新消息</string>
    <string name="token_has_expired">已过期</string>
    <string name="account_token_has_expired">%s 的授权已经过期，请重新授权</string>
    <string name="dont_have_other_account">没有多余帐号可供切换</string>
    <string name="you_cancel_login">你取消了授权</string>
    <string name="login_success">授权成功</string>
    <string name="update_account_success">已有该帐号，授权信息更新成功</string>
    <string name="account_management">帐号管理</string>
    <string name="remove_successfully">删除成功</string>
    <string name="add_account">添加</string>
    <string name="add_prod">搜索上架</string>
    <string name="apply_new_prod">申请上新</string>
    <string name="oauth_login">网页授权</string>
    <string name="hack_login">黑魔法授权</string>
    <string name="official_app_login">官方客户端授权</string>
    <string name="login">授权</string>
    <string name="logining">授权中</string>
    <string name="email_cant_be_empty">登录邮箱不能为空</string>
    <string name="password_cant_be_empty">密码不能为空</string>
    <string name="login_email">登录邮箱</string>
    <string name="login_password">密码</string>
    <string name="app_key">尾巴</string>
    <string name="login_failed">授权失败：</string>
    <string name="confirm_msg_manual_dada_auto">自动发单正在进行中，确定要人工设置出发吗？</string>
    <string name="alert_msg_storage_empty_cannot_sold">不能售卖库存为0的商品，请盘点并修改库存数</string>
    <string name="tip_dialog_title">提示</string>
    <string name="tip_dialog_content">
        1. 如果遇到问题请联系公司技术部门\n
    </string>
    <string name="title_changelog">更新日志</string>
    <string name="changelog_close">关闭</string>
    <string name="click_to_top_tip">点击空白区域直接返回顶部</string>
    <string name="and_then">你是要？</string>
    <string name="reply">回复</string>
    <string name="delete">删除</string>
    <string name="trash">作废</string>
    <string name="reply_to_comment">回复评论</string>
    <string name="view">查看微博</string>
    <string name="view_comment">查看评论</string>
    <string name="new_orders_count">新订单数</string>
    <string name="refresh">刷新</string>
    <string name="refreshing">刷新中……</string>
    <string name="no_new_message">没有新消息</string>
    <string name="total">共计</string>
    <string name="new_messages_count">%s条新消息</string>
    <string name="new_messages">条新消息</string>
    <string name="old_messages">条旧消息</string>
    <string name="weibos">条微博</string>
    <string name="loading">载入中……</string>
    <string name="click_to_load_some_older_msg">点击载入中间数据</string>
    <string name="loading_middle_msg">载入中间数据……</string>
    <string name="click_to_load_older_message">网络有问题，点击重新载入</string>
    <string name="older_message_empty">没有更早的消息了</string>
    <string name="more">载入更多</string>
    <string name="browser_all_messages">浏览全部微博</string>
    <string name="message_list">消息列表</string>
    <string name="message_number">微博消息</string>
    <string name="following_list">关注列表</string>
    <string name="fan_list">粉丝列表</string>
    <string name="topic_number">话题数</string>
    <string name="topic_list">话题列表</string>
    <string name="weibo_number">微博数</string>
    <string name="follow_him">关注</string>
    <string name="manage_group">管理分组</string>
    <string name="unfollow_him">取消关注</string>
    <string name="follow_successfully">关注成功</string>
    <string name="unfollow_successfully">已经取消关注</string>
    <string name="modify_successfully">修改完成</string>
    <string name="remove_fan_successfully">Ta 已经不再关注你了</string>
    <string name="m">男</string>
    <string name="f">女</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="bt_not_enabled_leaving">请开启蓝牙</string>
    <string name="lab_bluetoothetting">蓝牙设置</string>
    <string name="menu_searchbluetooth">搜索设备</string>
    <string name="menu_clearbluetooth">清除蓝牙设备</string>
    <string name="not_connected">未连接到蓝牙打印机</string>
    <string name="title_connected_to">链接到</string>
    <string name="title_connecting">连接中...</string>
    <string name="title_not_connected">未连接</string>
    <string name="title_bluetooth_setting">蓝牙打印设置</string>
    <string name="title_print_setting">打印设置</string>
    <string name="title_setting">设置</string>
    <string name="title_storage_status">供货管理</string>
    <string name="title_order_query">订单查询</string>
    <string name="action_package_done">打包完成</string>
    <string name="action_start_ship">提醒出发</string>
    <string name="action_set_arrived">提醒送达</string>
    <string name="menu_manage_order">订单</string>
    <string name="menu_accept_order">接单</string>
    <string name="menu_store_manage">店铺</string>
    <string name="menu_mine">我的</string>
    <string name="menu_operation">运营</string>
    <string name="menu_reminders">提醒</string>
    <string name="auth_mobilephone">手机号</string>
    <string name="auth_password">密码</string>
    <string name="auth_log_in">登录</string>
    <string name="auth_error_empty_username">请输入用户名</string>
    <string name="auth_error_empty_password">请输入密码</string>
    <string name="auth_error_invalid_response">服务器应答无效</string>
    <string name="auth_error_invalid_grant"> 用户名密码错误</string>
    <string name="error_get_order">获取订单信息失败</string>
    <string name="really_quit">退出登录</string>
    <string name="quit">退出登录</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="search_hint">手机/商品/地址搜索</string>
    <string name="action_search">搜索</string>
    <string name="searching">搜索中</string>
    <string name="running">等待中</string>
    <string name="signing">打卡中</string>
    <string name="saving">正在保存</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_user_feedback">客诉信息</string>
    <string name="feedback_hint">输入用户反馈信息</string>
    <string name="feedback_process_hint">客诉处理过程、结果</string>
    <string name="menu_user_feedback">反馈</string>
    <string name="menu_good_maint">商品</string>
    <string name="menu_menu_operation">运营</string>
    <string name="menu_invalid">置为无效</string>
    <string name="menu_send_coupon">发送优惠券</string>
    <string name="menu_kf_coupon">客服定制优惠券</string>
    <string name="menu_order_chg_pack">修改分拣员</string>
    <string name="menu_order_chg_ship">修改送货员</string>
    <string name="action_source_done">备货状态</string>
    <string name="order_text">订单</string>
    <string name="label_status">状态</string>
    <string name="process_right_once">需立即处理</string>
    <string name="search_product_hint">点此搜索</string>
    <string name="title_storage_self_provided">门店自采管理</string>
    <string name="status_fixed">已解决</string>
    <string name="status_working">未解决</string>
    <string name="status_deleted">已作废</string>
    <string name="menu_order_chg_store">修改店铺</string>
    <string name="menu_provide_edit">订货</string>
    <string name="menu_provide_lock">提交</string>
    <string name="menu_provide_locked">已提交</string>
    <string name="menu_provide_ship">订单发货</string>
    <string name="menu_provide_accept">订单收货</string>
    <string name="store_on_sale_now">库里有货或临时可采货，立即开卖</string>
    <string name="store_on_sale_after_off_work">暂停售卖，下班后自动开售</string>
    <string name="store_on_sale_after_have_storage">暂停售卖，来货后自动开售</string>
    <string name="store_on_sale_none">长期下架(限店长操作)</string>
    <string name="store_on_sale_manual">回头手工上架</string>
    <string name="menu_order_store_remark">增加备注</string>
    <string name="order_save_remark">增加备注</string>
    <string name="menu_order_refund">退款/加钱</string>
    <string name="menu_to_waiting_list">稍后处理</string>
    <string name="working_status">工作进度</string>
    <string name="app_id">58b571b2</string>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <string name="ship_accept_status">接单状态</string>
    <string-array name="feedback_source_array">
        <item>400来电</item>
        <item>微信后台</item>
        <item>客户回访</item>
        <item>通过员工反馈</item>
        <item>饿了么评价</item>
        <item>美团外卖评价</item>
        <item>百度外卖评价</item>
        <item>京东到家评价</item>
        <item>员工建议</item>
    </string-array>
    <string-array name="storage_categories_array">
        <item>只看即将补货</item>
        <item>只看缺货</item>
        <item>只看总部备货</item>
        <item>只看门店备货</item>
    </string-array>
    <string-array name="req_select_list">
        <item>斤</item>
        <item>份</item>
        <item>克</item>
        <item>千克</item>
    </string-array>
    <string name="scanner_activity">扫码上新</string>
    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
</resources>