<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh"
        support:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/menu_user_feedback"
        android:title="@string/menu_user_feedback"
        support:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_set_invalid"
        android:title="@string/menu_invalid"
        support:showAsAction="ifRoom|collapseActionView" />


    <item android:id="@+id/menu_send_coupon"
        android:title="@string/menu_send_coupon"
        support:showAsAction="ifRoom|collapseActionView" />


    <item android:id="@+id/menu_chg_pack_worker" android:title="@string/menu_order_chg_pack"/>
    <item android:id="@+id/menu_chg_ship_worker" android:title="@string/menu_order_chg_ship"/>
    <item android:id="@+id/menu_chg_store" android:title="@string/menu_order_chg_store"/>

</menu>