<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/menu_accept"
        android:title="@string/menu_reminders"
        android:icon="@drawable/ic_add_alert_black_24dp"
        android:actionLayout="@layout/feed_update_count"
        support:showAsAction="always"/>
    <item
        android:id="@+id/menu_process"
        android:title="@string/menu_manage_order"
        android:icon="@drawable/ic_list_black_24dp"
        support:showAsAction="always"/>

      <item
        android:id="@+id/menu_store_maint"
        android:title="@string/menu_good_maint"
        android:icon="@drawable/ic_widgets_black_24dp"
        support:showAsAction="always"/>

    <item
        android:id="@+id/menu_mine"
        android:title="@string/menu_mine"
        android:icon="@drawable/ic_settings_applications_black_24dp"
        support:showAsAction="always"/>

    <item android:id="@+id/menu_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        support:showAsAction="always" />
</menu>