<?xml version="1.0" encoding="utf-8"?>
<tabs>
    <tab
        id="@+id/menu_accept"
        title="@string/menu_reminders"
        icon="@drawable/ic_add_alert_black_24dp"
        actionLayout="@layout/feed_update_count"/>
    
    <tab
        id="@+id/menu_process"
        title="@string/menu_manage_order"
        icon="@drawable/ic_list_black_24dp"
        />

    <tab
        id="@+id/menu_store_maint"
        title="@string/menu_good_maint"
        icon="@drawable/ic_widgets_black_24dp"
        />

    <!--tab
        id="@+id/menu_operation"
        title="@string/menu_menu_operation"
        icon="@drawable/ic_monetization_on_black_24dp"
        /-->

    <tab
        id="@+id/menu_mine"
        title="@string/menu_mine"
        icon="@drawable/ic_settings_applications_black_24dp"
        />

    <!--<tab id="@+id/menu_search"-->
        <!--title="@string/action_search"-->
        <!--icon="@drawable/ic_search_black_24dp"-->
         <!--/>-->
    
</tabs>