<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderSingleActivity"
    android:layout_gravity="center_vertical"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <WebView
            android:id="@+id/activity_main_webview"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_bg"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_print" />
        <Button
            android:layout_marginStart="5dp"
            android:id="@+id/button_call_dada"
            android:layout_toEndOf="@id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_call_dada" />
        <!--<Switch-->
            <!--android:layout_marginStart="5dp"-->
            <!--android:layout_toEndOf="@id/button1"-->
            <!--android:id="@+id/button_source_ready"-->
            <!--android:textOn="已备货"-->
            <!--android:textOff="备货中"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--/>-->
        <Button
            android:id="@+id/button2"
            android:layout_toEndOf="@id/button_call_dada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_package_done" />
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/button2"
            android:text="@string/delay_faq_btn" />
    </RelativeLayout>

</RelativeLayout>