<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/order_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/order_text"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/order_id"
        android:text="#546"
        android:textSize="18sp"
        android:layout_toEndOf="@id/order_label"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/order_platform_no"
        android:layout_toEndOf="@id/order_id"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_below="@id/feedback_source"
        android:text="饿了么差评"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_below="@id/feedback_source"
        android:id="@+id/feedback_created"
        android:text="2016-06-23 11:30"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/feedback"
        android:text="客诉内容信息"
        android:layout_below="@id/emergency"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/process_intro"
        android:layout_below="@id/emergency"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine|textNoSuggestions"
        android:hint="@string/feedback_hint"
        android:lines="4"
        />

    <Spinner android:id="@+id/cause_type"
        android:layout_below="@+id/process_intro"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_below="@id/feedback"
        android:id="@+id/cancel_btn"
        android:text="@string/cancel"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_below="@id/feedback"
        android:id="@+id/save_btn"
        android:layout_toEndOf="@id/cancel_btn"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>