<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_edge_horizontal_margin"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="72dp"
            tools:ignore="SpUsage" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_mobilephone"
            android:inputType="phone"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_password"
            android:imeActionId="@+id/ime_login"
            android:imeActionLabel="@string/auth_log_in"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/card_content_horizontal_margin_with_4dp_padding"
            android:layout_marginRight="@dimen/card_content_horizontal_margin_with_4dp_padding"
            android:text="@string/auth_log_in"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="@dimen/weight_1_when_tablet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="语音技术由科大讯飞提供"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>
</ScrollView>